rust/errors.txt
   Compiling cap-rust-sandbox v0.1.0 (/home/philippe/repositories/Translucence/cape/rust)
warning: unnecessary parentheses around function argument
  --> rust/src/records_merkle_tree/mod.rs:55:9
   |
55 |         (height),
   |         ^^^^^^^^ help: remove these parentheses
   |
   = note: `#[warn(unused_parens)]` on by default

warning: unused import: `bincode::Error`
   --> rust/src/records_merkle_tree/mod.rs:142:9
    |
142 |     use bincode::Error;
    |         ^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: variable does not need to be mutable
  --> rust/src/records_merkle_tree/mod.rs:80:17
   |
80 |             let mut current_val = compute_hash_leaf(lap.leaf.0, uid);
   |                 ----^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> rust/src/records_merkle_tree/rescue.rs:58:24
   |
58 |         let contract = get_contract_records_merkle_tree().await;
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- supplied 0 arguments
   |                        |
   |                        expected 1 argument
   |
note: function defined here
  --> rust/src/records_merkle_tree/mod.rs:48:21
   |
48 | pub(crate) async fn get_contract_records_merkle_tree(height: u64) -> TestRecordsMerkleTree<
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -----------

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> rust/src/records_merkle_tree/rescue.rs:72:24
   |
72 |         let contract = get_contract_records_merkle_tree().await;
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- supplied 0 arguments
   |                        |
   |                        expected 1 argument
   |
note: function defined here
  --> rust/src/records_merkle_tree/mod.rs:48:21
   |
48 | pub(crate) async fn get_contract_records_merkle_tree(height: u64) -> TestRecordsMerkleTree<
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -----------

error[E0308]: mismatched types
   --> rust/src/records_merkle_tree/mod.rs:261:47
    |
261 |         let mut mt = MerkleTree::<Fr254>::new(HEIGHT).unwrap();
    |                                               ^^^^^^ expected `u8`, found `u64`
    |
help: you can convert a `u64` to a `u8` and panic if the converted value doesn't fit
    |
261 |         let mut mt = MerkleTree::<Fr254>::new(HEIGHT.try_into().unwrap()).unwrap();
    |                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> rust/src/records_merkle_tree/mod.rs:351:24
    |
351 |         let contract = get_contract_records_merkle_tree().await;
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- supplied 0 arguments
    |                        |
    |                        expected 1 argument
    |
note: function defined here
   --> rust/src/records_merkle_tree/mod.rs:48:21
    |
48  | pub(crate) async fn get_contract_records_merkle_tree(height: u64) -> TestRecordsMerkleTree<
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -----------

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `cap-rust-sandbox` (lib test) generated 2 warnings (1 duplicate)
error: could not compile `cap-rust-sandbox` due to 4 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: function is never used: `hash`
  --> rust/src/records_merkle_tree/mod.rs:26:15
   |
26 | pub(crate) fn hash<F: RescueParameter>(
   |               ^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: function is never used: `compute_hash_leaf`
  --> rust/src/records_merkle_tree/mod.rs:38:15
   |
38 | pub(crate) fn compute_hash_leaf(leaf_value: Fr254, uid: u64) -> Fr254 {
   |               ^^^^^^^^^^^^^^^^^

warning: function is never used: `flatten_frontier`
  --> rust/src/records_merkle_tree/mod.rs:74:4
   |
74 | fn flatten_frontier(frontier: &MerkleFrontier<Fr254>, uid: u64) -> Vec<Fr254> {
   |    ^^^^^^^^^^^^^^^^

warning: function is never used: `parse_flattened_frontier`
   --> rust/src/records_merkle_tree/mod.rs:102:4
    |
102 | fn parse_flattened_frontier(flattened_frontier: &[Fr254]) -> MerkleFrontier<Fr254> {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `cap-rust-sandbox` (lib) generated 6 warnings
error: build failed
